--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-guidance-container.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-guidance-container.html
@@ -1,6 +1,6 @@
 <div class="form__group form-checkbox">
     <label class="control__label">foo
-        <i data-container="baz" data-content="bar" data-placement="top" rel="clickover" aria-hidden="true" class="icon-question-sign input-group-guidance"></i>
+        <i data-container="baz" data-content="bar" data-placement="top" data-toggle="popover" data-autoclose="true" aria-hidden="true" class="icon-question-sign input-group-guidance"></i>
     </label>
     <div class="controls">
         <input type="checkbox" class="form__control checkbox" />
