--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-optimize-many-guidance-container.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-optimize-many-guidance-container.html
@@ -1,5 +1,5 @@
 <div class="form__group form-choice">
-    <label class="control__label">foo <i data-container="baz" data-content="bar" data-placement="top" rel="clickover" aria-hidden="true" class="icon-question-sign input-group-guidance"></i></label>
+    <label class="control__label">foo <i data-container="baz" data-content="bar" data-placement="top" data-toggle="popover" data-autoclose="true" aria-hidden="true" class="icon-question-sign input-group-guidance"></i></label>
     <div class="controls">
         <select class="form__control select js-select2">
             <option value="foo">Foo</option>
