--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/time-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/time-guidance.html
@@ -1,6 +1,6 @@
 <div class="form__group">
 <label class="control__label">foo
-        <i data-container="body" data-content="bar" data-placement="top" rel="clickover" aria-hidden="true" class="icon-question-sign input-group-guidance"></i>
+        <i data-container="body" data-content="bar" data-placement="top" data-toggle="popover" data-autoclose="true" aria-hidden="true" class="icon-question-sign input-group-guidance"></i>
     </label>
     <div class="controls">
         <input placeholder="hh:mm" data-timepicker="true" type="text" class="form__control" />
