--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-guidance-container.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-guidance-container.html
@@ -1,6 +1,6 @@
 <div class="form__group  form__group--toggle">
     <label class="toggle-switch-wrapper-label" for="toggletest">
-        <span class="control__label">Toggle <i data-container="baz" data-content="bar" data-placement="top" rel="clickover" aria-hidden="true" class="icon-question-sign input-group-guidance"></i></span>
+        <span class="control__label">Toggle <i data-container="baz" data-content="bar" data-placement="top" data-toggle="popover" data-autoclose="true" aria-hidden="true" class="icon-question-sign input-group-guidance"></i></span>
         <span class="controls">
             <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
             <span class="toggle-switch-label"></span>
