--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/radio-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/radio-help.html
@@ -1,8 +1,12 @@
 <div class="form__group form-radio">
+    <label for="form_field" class="control__label">foo</label>
     <div class="controls">
         <input 
         aria-describedby="guid-1" 
-        type="radio" 
+        id="form_field" 
+        name="form[field]"
+		type="radio"
+		value="1"
         class="form__control radio" />
         <span class="help-block" id="guid-1">my help text</span>
     </div>
