--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range.html
@@ -1,5 +1,10 @@
 <div class="form__group form-range">
+    <label for="form_field" class="control__label">foo</label>
     <div class="controls">
-        <input type="range" class="form__control" />
+        <input 
+            id="form_field" 
+            name="form[field]" 
+            type="range" 
+            class="form__control" />
     </div>
 </div>
