--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-error.html
@@ -1,4 +1,4 @@
-<div class="form__group has-error form__button-group">
+<fieldset class="form__group has-error form__button-group">
     <div class="controls btn__group">
         <input name="bands" type="radio" class="form__control radio" />
         <label class="control__label">AM</label>
@@ -8,4 +8,4 @@
         <label class="control__label">MW</label>
         <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
-</div>
+</fieldset>
