--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-label-hide.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-label-hide.html
@@ -1,5 +1,5 @@
-<div class="form__group form__button-group">
-    <label class="control__label hide">foo</label>
+<fieldset class="form__group form__button-group">
+    <legend class="control__label hide">foo</legend>
     <div class="controls btn__group">
         <input name="bands" type="radio" class="form__control radio" />
         <label class="control__label">AM</label>
@@ -8,4 +8,4 @@
         <input name="bands" type="radio" class="form__control radio" />
         <label class="control__label">MW</label>
     </div>
-</div>
+</fieldset>
