--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group.html
@@ -1,4 +1,4 @@
-<div class="form__group form__button-group">
+<fieldset class="form__group form__button-group">
     <div class="controls btn__group">
         <input name="bands" type="radio" class="form__control radio" />
         <label class="control__label">AM</label>
@@ -7,4 +7,4 @@
         <input name="bands" type="radio" class="form__control radio" />
         <label class="control__label">MW</label>
     </div>
-</div>
+</fieldset>
