--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-label-hide.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-label-hide.html
@@ -1,5 +1,5 @@
 <fieldset class="form__group form__button-group">
-    <legend for="id-guid-1" class="control__label hide">foo</legend>
+    <legend class="control__label hide">foo</legend>
     <div class="controls btn__group">
         <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
         <label for="id-guid-1" class="control__label">AM</label>
