--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-label.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-label.html
@@ -1,11 +1,11 @@
 <fieldset class="form__group form__button-group">
-    <legend for="id-guid-1" class="control__label">Band</legend>
+    <legend class="control__label">Band</legend>
     <div class="controls btn__group">
-        <input name="bands" type="radio" class="form__control radio" />
-        <label class="control__label">AM</label>
-        <input name="bands" type="radio" class="form__control radio" />
-        <label class="control__label">FM</label>
-        <input name="bands" type="radio" class="form__control radio" />
-        <label class="control__label">MW</label>
+        <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
+        <label for="id-guid-1" class="control__label">AM</label>
+        <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
+        <label for="id-guid-1" class="control__label">FM</label>
+        <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
+        <label for="id-guid-1" class="control__label">MW</label>
     </div>
 </fieldset>
