--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/actions_menu-dividers.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/actions_menu-dividers.html
@@ -1,5 +1,5 @@
 <div class="btn__group dropdown">
-    <button id="actions_menu" aria-haspopup="true" aria-expanded="false" aria-controls="guid-1" data-toggle="dropdown" class="btn dropdown__toggle">Actions<span aria-label="0 rows selected" style="display: none;" class="badge label--primary js-bulk-actions-badge">0</span>&nbsp;<span class="caret"></span></button>
+    <button aria-haspopup="true" aria-expanded="false" aria-controls="guid-1" data-toggle="dropdown" class="btn dropdown__toggle">Actions<span aria-label="0 rows selected" style="display: none;" class="badge label--primary js-bulk-actions-badge">0</span>&nbsp;<span class="caret"></span></button>
     <ul id="guid-1" class="dropdown__menu pull-left">
         <li>
             <a href="/one">one</a>
