--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-template.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-template.html
@@ -8,7 +8,7 @@
 <div class="tab__pane is-active" id="foo">
     <div class="tab__container">
         <div class="tab__inner">
-            <main class="tab__content" id="skip-target"></main>
+            <div class="tab__content" id="skip-target" role="main"></div>
         </div>
     </div>
 </div>
