Prepend form error text with visually hidden “Error:”

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
@@ -4,7 +4,7 @@
         <span class="controls">
             <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
             <span class="toggle-switch-label"></span>
-            <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+            <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> <span class="hide">Error:</span> my error</span>
         </span>
     </label>
 </div>
