--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-error.html
@@ -6,6 +6,6 @@
         <label class="control__label">FM</label>
         <input name="bands" type="radio" class="form__control radio" />
         <label class="control__label">MW</label>
-        <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> <span class="hide">Error:</span> my error</span>
     </div>
 </fieldset>
