--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error">
     <div class="controls">
         <p>foo</p>
-        <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> <span class="hide">Error:</span> my error</span>
     </div>
 </div>
