--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/error-multiple.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/error-multiple.html
@@ -1,2 +1,2 @@
-<span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> foo</span>
-<span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> bar</span>
+<span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> <span class="hide">Error:</span> foo</span>
+<span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> <span class="hide">Error:</span> bar</span>
