--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/error-single.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/error-single.html
@@ -1,1 +1,1 @@
-<span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> foo</span>
+<span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> <span class="hide">Error:</span> foo</span>
