--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-error.html
@@ -4,6 +4,6 @@
             <option value="foo">bar</option>
             <option value="bar">baz</option>
         </select>
-        <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> <span class="hide">Error:</span> my error</span>
     </div>
 </div>
