Update breadcrumb markup scheme to match a11y guidelines

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/nav/breadcrumb-items.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/nav/breadcrumb-items.html
@@ -1,5 +1,13 @@
 <nav class="breadcrumb" aria-label="breadcrumbs">
-    <a href="#foo">foo</a> /
-    <a href="#bar">bar</a> /
-    <a href="#baz" aria-current="page">baz</a>
+    <ol>
+        <li>
+            <a>foo</a>
+        </li>
+        <li>
+            <a href="#bar">bar</a>
+        </li>
+        <li>
+            <a aria-current="page">baz</a>
+        </li>
+    </ol>
 </nav>
