--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/create-enctype.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/create-enctype.html
@@ -1,1 +1,1 @@
-<form method="POST" enctype="multipart/form-data" class="form">
+<form method="POST" enctype="multipart/form-data" novalidate class="form">
