--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/create-put.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/create-put.html
@@ -1,2 +1,2 @@
-<form method="POST" enctype="application/x-www-form-urlencoded" class="form">
+<form method="POST" enctype="application/x-www-form-urlencoded" novalidate class="form">
 <input name="_method" value="PUT" type="hidden" />
