--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/create.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/create.html
@@ -1,1 +1,1 @@
-<form method="POST" enctype="application/x-www-form-urlencoded" class="form">
+<form method="POST" enctype="application/x-www-form-urlencoded" novalidate class="form">
